feat(auth): implement Custom Login UI, PKCE support and fix User serialization
Auth Service & Security:
- Implemented custom Login UI using Tailwind CSS (replaced default Spring form)
- Refactored SecurityConfig to support PKCE and Public Clients (SPA friendly)
- Fixed UserDetails serialization issues using Jackson Mixins and custom ObjectMapper
- Added OAuth2TokenCustomizer to inject 'roles', 'user_id', and 'name' into JWT claims
- Configured AuthenticationSuccessHandler to correctly redirect back to client (localhost:5173) after login
- Allowed static resources (css/js/images) in SecurityFilterChain for the new login page

Domain & Data Seeding:
- Updated InitialSeedConfig to register 'petshop-client' as Public Client (no secret) with PKCE enforced
- Refactored Usuario entity to fix Lombok recursion issues (replaced @Data with @Getter/@Setter)
- Updated UserDetailsImpl to support JSON deserialization (added Jackson annotations)